[package]
name = "hyper-mini"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["fmt","env-filter"] }

tokio = { version="1", features=["rt-multi-thread", "macros"] }
axum = "0.7"
serde = { version="1", features=["derive"] }
serde_json = "1"
uuid = { version="1", features=["v4"] }

# Linux-only deps (guarded with cfg)
[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = "0.18"
kvm-bindings = "0.7"
vm-memory = "0.14"
vmm-sys-util = "0.12"
linux-loader = "0.10"
